k8s/reactfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactfolio-service
spec:
  type: ClusterIP
  selector:
    app: reactfoliopod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
